Mavenize
It builds!